[Feature #160329243]Catch json response message

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -30,7 +30,8 @@
 			<input type="checkbox" name="checkbox" id="checkbox"> I agree to terms and conditions
 			<br>
 			<!-- validate function is called when submit button is clicked-->
-			<input type="submit" value="signUp" onclick="return validateForm()">
+			<!-- <input type="submit" value="signUp" return validateForm()> -->
+			<input type="submit" value="signUp">
 		</form>
 	</div>
 	
