[Finishes #160415608]Consume logout endpoint

--- a/UI/home.html
+++ b/UI/home.html
@@ -13,7 +13,7 @@
       <a href="profile.html">Profile</a>
       <a href='post-question.html'>Post Question</a>
       <a href="recent-questions.html">Recent Questions</a>
-      <a href="index.html">Logout</a>
+      <a id="logout" onclick="logoutUser()">Logout</a>
     </div>
 </div>
 
@@ -62,6 +62,6 @@
 <footer class="footer">
     <p>&copy; Copyright 2018, StackOverflow-lite</p>
 </footer>
-
+<script src="js/logout.js"></script>
 </body>
 </html>
