[Feature #160416332]consume post answer endpoint

--- a/UI/home.html
+++ b/UI/home.html
@@ -31,11 +31,11 @@
 
           <h3 id="all-quests"></h3> 
           <h4>Answer 1</h4>
-          <p>from . import models</p>
+          <p id="answer-body">from . import models</p>
           <textarea class="textarea" rows="2" cols="60" placeholder="Your Answer"></textarea>
           <br>
      
-        <input class="submit_q" type="button" value="Reply"> 
+        <input class="submit_q" type="button" id="answer-button" value="Reply"> 
 </div>
 
 <footer class="footer">
