--- a/UI/profile.html
+++ b/UI/profile.html
@@ -45,7 +45,7 @@
         <tr>
 <td>
 <div class="main-column3">
-  <h2>Questions asked [15]</h2>
+  <h2 id="len-quest"></h2>
   <ul id="UserQuestions">
   </ul>
 
