--- a/UI/post-question.html
+++ b/UI/post-question.html
@@ -23,9 +23,9 @@
       
       <form>
           <h3 id="quest-title"></h3>
-          <p id="quest-body">Q1) I have a very simple django app that I am attempting to deploy to heroku, but it keeps crashing. Everything works fine on my local machine, but not on heroku<span>[Edit]</span></h3>
+          <p id="quest-body">Q1) I have a very simple django app that I am attempting to deploy to heroku, but it keeps crashing. Everything works fine on my local machine, but not on heroku</h3>
           <h4>Answer 1 </h4>
-          <p>It's better to import models that you will user, since it won't visually collide with django.db.models <span>[Accept]</span></p>
+          <p>It's better to import models that you will user, since it won't visually collide with django.db.models </p>
 
           <h4>Answer 2</h4>
           <p>I would suggest absolute imports as py3 get's rid of relative.</p>
