[Feature #160416624]Consume update answer endpoint

--- a/UI/fetch-specific-question.html
+++ b/UI/fetch-specific-question.html
@@ -21,6 +21,6 @@
   <p>&copy; Copyright 2018, StackOverflow-lite</p>
 </footer>
 <script src="js/fetchSpecificQuestion.js"></script>
-<!-- <script src="js/postAnswer.js"></script> -->
+<!-- <script src="js/fetchSpecificQuestion.js"></script> -->
 </body>
 </html>
