--- a/UI/home.html
+++ b/UI/home.html
@@ -15,17 +15,6 @@
       <a id="logout" onclick="logoutUser()">Logout</a>
     </div>
 </div>
-
-<div class="main-column">
-      <h2>Ask questions</h2>
-      <p>This website serves as a platform for users to ask and answer questions, and, through membership and active participation, to vote questions and answers up or down and edit questions and answers.Feel free to ask all programming questions that you have.Dont be stuck out there yet there is solution to everything.Stack Overflow only accepts questions about programming that are tightly focused on a specific problem.Focus on questions about an actual problem you have faced. Include details about what you have tried and exactly what you are trying to do</p>
-    </div>
-  <div class="main-column2">  
-      <h2>Get answers</h2>
-      <p>Its is not always a guarantee that you will get answers to all of your questions.To get better answers, you may need to put additional effort into your question. Edit your question to provide status and progress updates. Document your own continued efforts to answer your question. This will naturally bump your question to the homepage and get more people interested in it.Reading answered questions provides lot of knowledge as it starts from a problem, has all the possible solutions and a best solution as well.</p>
-
-</div>
-
  <div class="wrap_q2">
   <h2>All Questions</h2>
 
@@ -42,5 +31,6 @@
     <p>&copy; Copyright 2018, StackOverflow-lite</p>
 </footer>
 <script src="js/fetchAllQuestions.js"></script>
+<script src="js/logout.js"></script>
 </body>
 </html>
