--- a/UI/login.html
+++ b/UI/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>SignUp Form</title>
+<title>Login Form</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <link href="css/style.css" type="text/css" rel="stylesheet"/>
 <!-- script for form validation that ensures all fields are filled-->
