--- a/UI/profile.html
+++ b/UI/profile.html
@@ -18,10 +18,11 @@
     <br>
     <br>
 <body>
-<table>
-  <tr>
-    <td>
-  <section>
+
+  <div class="row">
+    <div class="column">
+    <div id="pro">
+    <section>
     <div class="card">
       <div class="top">
         <img src="img/head2.png" class="img">
@@ -36,39 +37,34 @@
         <button class="profile-action">Edit your profile</button>
        
 
+         </div>
+         </div>
+         </section>
+         </div>
+    </div>
+
+    <div class="column">
+        <div class="main-column3">
+        <h2 id="len-quest">Questions asked[0]</h2>
+        <ul id="UserQuestions">
+        </ul>
+
       </div>
     </div>
-  </section>
-</td>
-    <td>
-      <table>
-        <tr>
-<td>
-<div class="main-column3">
-  <h2 id="len-quest"></h2>
-  <ul id="UserQuestions">
-  </ul>
+  </div><!--end row1-->
 
-</div>
+  <div class="row">
+    <div class="column">
+        <div class="main-column3">  
+          <h2 id="len-recent">Recently asked [0]</h2>
+          <ul id="recentQuestions">
+          </ul>
+        </div>
+      </div>
 
-    <div class="main-column3">  
-      <h2>Answers given [8]</h2>
-      <ul>
-        <li>Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 3]</span></li>
-        <li>Tea Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 3]</span></li>
-        <li>Milk Its is not always a guarantee that you will get answers to all of your questions<span>[answers 3]</span>.</li>
-        <li>Its is not always a guarantee that<span>[answers 3]</span></li>
-        <a href="#">Read More >></a>
-      </ul>
-    </div>
-
-
-</td>
-        </tr>
-        <tr>
-          <td>
-            <div class="main-column3">
-              <h2>Most answered [20]</h2>
+    <div class="column">
+                  <div class="main-column3">
+              <h2>Most answered [0]</h2>
               <ul>
                 <li>Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 8]</span></li>
                 <li>Tea Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 8]</span></li>
@@ -78,22 +74,9 @@
               </ul>
 
             </div>
-<div class="main-column3">
-  <h2>Recently asked [4]</h2>
-  <ul>
-    <li>Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 3]</span></li>
-    <li>Tea Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 3]</span></li>
-    <li>Milk Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 3]</span></li>
-    <li>Its is not always a guarantee that<span>[answers 3]</span></li>
-    <a href="#">Read More >></a>
-  </ul>
-</div>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+    </div>
+  </div><!--end row2-->
+
 
 </div>
 <footer class="footer">
@@ -103,3 +86,7 @@
 <script src="js/fetchSpecificQuestion.js"></script>
  </body>
 </html>
+
+
+
+
