add functionality to view most answered question

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -18,31 +18,23 @@
     <br>
     <br>
 <body>
+  <div id="pro">
+    <img src="img/head2.png" class="img">
+  </div>
 
   <div class="row">
     <div class="column">
-    <div id="pro">
-    <section>
-    <div class="card">
-      <div class="top">
-        <img src="img/head2.png" class="img">
-        <br><br>
-        <h3 class="name">Eva Maina <span class="status"></span></h3>
-        <p class="title">Learner</p>
-      </div>
-    <br>
-      <div class="bottom">
-        
-        <button class="profile-action">Open account settings</button>
-        <button class="profile-action">Edit your profile</button>
-       
 
-         </div>
-         </div>
-         </section>
-         </div>
     </div>
-
+    </div>
+    <div class="row">
+    <div class="column">
+        <div class="main-column3">  
+          <h2 id="len-recent">Recently asked [0]</h2>
+          <ul id="recentQuestions">
+          </ul>
+        </div>
+      </div>
     <div class="column">
         <div class="main-column3">
         <h2 id="len-quest">Questions asked[0]</h2>
@@ -56,29 +48,21 @@
   <div class="row">
     <div class="column">
         <div class="main-column3">  
-          <h2 id="len-recent">Recently asked [0]</h2>
-          <ul id="recentQuestions">
+          <h2 id="len-recent">Answers given [0]</h2>
+          <ul id="answersGiven">
           </ul>
         </div>
       </div>
 
     <div class="column">
-                  <div class="main-column3">
-              <h2>Most answered [0]</h2>
-              <ul>
-                <li>Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 8]</span></li>
-                <li>Tea Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 8]</span></li>
-                <li>Milk Its is not always a guarantee that you will get answers to all of your questions.<span>[answers 8]</span></li>
-                <li>Its is not always a guarantee that<span>[answers 8]</span></li>
-                <a href="#">Read More >></a>
-              </ul>
-
-            </div>
+        <div class="main-column3">
+          <h2>Most answered [0]</h2>
+             <table id="MostAnsweredQuestion"></table>
+        </div>
     </div>
   </div><!--end row2-->
-
-
 </div>
+<br><br><br>
 <footer class="footer">
     <p>&copy; Copyright 2018, StackOverflow-lite</p>
 </footer>
