add css to center containers

--- a/UI/fetch-specific-question.html
+++ b/UI/fetch-specific-question.html
@@ -15,7 +15,10 @@
 </div>
  <div class="wrap_q2">
   <h2 id="quest">Question</h2>
-  <h3 id="all-quests"></h3> 
+  <div class="wrapT"><h3 id="all-quests"></h3>
+    <p id="msg"></p>
+  </div>
+  
 </div>
 <footer class="footer">
   <p>&copy; Copyright 2018, StackOverflow-lite</p>
