--- a/UI/home.html
+++ b/UI/home.html
@@ -12,7 +12,8 @@
       <a href="profile.html">Profile</a>
       <a href='post-question.html'>Post Question</a>
       <a href="recent-questions.html">Recent Questions</a>
-      <a id="logout" onclick="logoutUser()">Logout</a>
+      <a href="signup.html">Signup</a>
+      <a href="login.html">Login</a>
     </div>
 </div>
  <div class="wrap_q2">
