--- a/UI/login.html
+++ b/UI/login.html
@@ -18,9 +18,10 @@
 
 	<div class="wrap">
 		<form id="loginData" name="login">
+			<p id="msg"></p>	
 			<h2>Member Login</h2>
-			<input type="text" name="username" id="username" placeholder="Enter username">
-			<input type="password" name="password" id="password" placeholder="Enter your password">
+			<input type="text" name="username" id="username" placeholder="Enter username" required>
+			<input type="password" name="password" id="password" placeholder="Enter your password" required>
 			<br>
 			<br>
 			<!-- validate function is called when submit button is clicked-->
