--- a/UI/profile.html
+++ b/UI/profile.html
@@ -12,7 +12,8 @@
     <a href="profile.html" class="active" id="profile1">Profile</a>
     <a href="post-question.html">Post Question</a>
     <a href="recent-questions.html" >Recent Questions</a>
-    <a href="../index.html">Logout </a>
+
+    <a href="index.html">Logout </a>
   </div>
 </div>
     <br>
@@ -48,15 +49,14 @@
   <div class="row">
     <div class="column">
         <div class="main-column3">  
-          <h2 id="len-recent">Answers given [0]</h2>
-          <ul id="answersGiven">
-          </ul>
+          <h2 id="len-answers">Answers given [0]</h2>
+          <table id="answersGiven"></table>
         </div>
       </div>
 
     <div class="column">
         <div class="main-column3">
-          <h2>Most answered [0]</h2>
+          <h2>Most answered</h2>
              <table id="MostAnsweredQuestion"></table>
         </div>
     </div>
