--- a/UI/index.html
+++ b/UI/index.html
@@ -11,10 +11,8 @@
     <a href="login.html">Login</a></div>
   </div> 
 <div class="wrap_q2">
-  <div class="wrap_q">
-    <h2 class="post_q">Top Questions</h2>
-    <h3 id="all-quests"></h3>
-  </div>
+  <h2>Top Questions</h2>
+  <h3 id="all-quests"></h3>
 </div>
 <footer class="footer">
   <p>&copy; Copyright 2018, StackOverflow-lite</p>
