--- a/UI/recent-questions.html
+++ b/UI/recent-questions.html
@@ -14,14 +14,21 @@
       <a href="profile.html">Profile</a>
         <a href="post-question.html">Post Question</a>
         <a href="recent-questions.html" class="active">Recent Questions</a>
-      <a href="index.html">Logout </a>
+        <a href="signup.html">Signup</a>
+        <a href="login.html">Login</a>
     </div>
   </div>
   <br> 
-    <div class="wrap_q">
+</div>
+<div class="wrap_q2">
+ <h2>Recent Questions</h2>
+ <h3 id="all-quests"></h3>        
+</div>
+
+    <!-- <div class="wrap_q">
       <h2 class="post_q">Recent Questions</h2>
       <h3 id="all-quests"></h3>
-    </div>
+    </div> -->
     </div>
   <script src="js/recentQuestions.js"></script>
 </body>
