reference css to UI

--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>profile</title>
- <link href="css/style.css" type="text/css" rel="stylesheet"/>
+ <link href="UI/css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <div class="header">
   <a href="#" class="brand">StackOverflow-lite</a>
