--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<link href="css/style.css" type="text/css" rel="stylesheet"/>
+<link href="UI/css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
   <div class="header">
