--- a/recent-questions.html
+++ b/recent-questions.html
@@ -3,7 +3,7 @@
 <head>
 <title>recent questions</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<link href="css/style.css" type="text/css" rel="stylesheet"/>
+<link href="UI/css/style.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
