--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
 <title>SignUp Form</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<link href="css/style.css" type="text/css" rel="stylesheet"/>
+<link href="UI/css/style.css" type="text/css" rel="stylesheet"/>
 <!-- script for form validation that ensures all fields are filled-->
 	<script src="js/formValidation.js"></script>
 
