style user questions page

--- a/fetch-specific-question.html
+++ b/fetch-specific-question.html
@@ -11,7 +11,7 @@
       <a href="profile.html">Profile</a>
       <a href='post-question.html'>Post Question</a>
       <a href="recent-questions.html">Recent Questions</a>
-      <a id="logout" onclick="logoutUser()">Logout</a>
+      <a id="logout" onclick="{logoutUser()}">Logout</a>
 </div>
  <div class="wrap_q2">
   <h2 id="quest">Question</h2>
@@ -23,7 +23,7 @@
 <footer class="footer">
   <p>&copy; Copyright 2018, StackOverflow-lite</p>
 </footer>
-<script src="js/fetchSpecificQuestion.js"></script>
-<!-- <script src="js/fetchSpecificQuestion.js"></script> -->
+<script src="UI/js/fetchSpecificQuestion.js"></script>
+<script src="UI/js/logout.js"></script>
 </body>
 </html>
