--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 <footer class="footer">
   <p>&copy; Copyright 2018, StackOverflow-lite</p>
 </footer>
-<script src="js/index.js"></script>
+<script src="UI/js/index.js"></script>
 </body>
 </html>
