--- a/post-question.html
+++ b/post-question.html
@@ -13,8 +13,7 @@
       <a href="profile.html">Profile</a>
       <a href="post-question.html" class="active">Post Question</a>
       <a href="recent-questions.html">Recent Questions</a>
-      <a href="index.html">Logout </a>
-      <!-- <a id="logout" onclick="logoutUser()">Logout</a> -->
+      <a href="login.html">Logout</a>
     </div>
   </div>
   <br> 
@@ -36,8 +35,8 @@
       </div>
       </div>
         
-<script src="js/postQuestion.js"></script>
-<script src="js/logout.js"></script>
+<script src="UI/js/postQuestion.js"></script>
+<script src="UI/js/logout.js"></script>
 </body>
 <footer class="footer">
   <p class="copyright">&copy; Copyright 2018, StackOverFlow-lite</p>
