--- a/profile.html
+++ b/profile.html
@@ -12,15 +12,14 @@
     <a href="profile.html" class="active" id="profile1">Profile</a>
     <a href="post-question.html">Post Question</a>
     <a href="recent-questions.html" >Recent Questions</a>
-
-    <a href="index.html">Logout </a>
+    <a href="login.html">Logout</a>
   </div>
 </div>
     <br>
     <br>
 <body>
   <div id="pro">
-    <img src="img/head2.png" class="img">
+    <img src="UI/img/head2.png" class="img">
   </div>
 
   <div class="row">
