--- a/recent-questions.html
+++ b/recent-questions.html
@@ -14,8 +14,7 @@
       <a href="profile.html">Profile</a>
         <a href="post-question.html">Post Question</a>
         <a href="recent-questions.html" class="active">Recent Questions</a>
-        <a href="signup.html">Signup</a>
-        <a href="login.html">Login</a>
+        <a href="login.html">Logout</a>
     </div>
   </div>
   <br> 
@@ -24,13 +23,8 @@
  <h2>Recent Questions</h2>
  <h3 id="all-quests"></h3>        
 </div>
-
-    <!-- <div class="wrap_q">
-      <h2 class="post_q">Recent Questions</h2>
-      <h3 id="all-quests"></h3>
-    </div> -->
     </div>
-  <script src="js/recentQuestions.js"></script>
+  <script src="UI/js/recentQuestions.js"></script>
 </body>
 <footer class="footer">
   <p class="copyright">&copy; Copyright 2018, StackOverFlow-lite</p>
