--- a/home.html
+++ b/home.html
@@ -12,8 +12,7 @@
       <a href="profile.html">Profile</a>
       <a href='post-question.html'>Post Question</a>
       <a href="recent-questions.html">Recent Questions</a>
-      <a href="signup.html">Signup</a>
-      <a href="login.html">Login</a>
+      <a href="login.html">Logout</a>
     </div>
 </div>
  <div class="wrap_q2">
@@ -24,7 +23,7 @@
 <footer class="footer">
     <p>&copy; Copyright 2018, StackOverflow-lite</p>
 </footer>
-<script src="js/fetchAllQuestions.js"></script>
-<script src="js/logout.js"></script>
+<script src="UI/js/fetchAllQuestions.js"></script>
+<script src="UI/js/logout.js"></script>
 </body>
 </html>
