--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <link href="UI/css/style.css" type="text/css" rel="stylesheet"/>
 <!-- script for form validation that ensures all fields are filled-->
-	<script src="js/formValidation.js"></script>
+	<script src="UI/js/formValidation.js"></script>
 
 </head>
 <body>
@@ -34,6 +34,6 @@
 <footer class="footer">
   <p>&copy; Copyright 2018, StackOverFlow-lite</p>
 </footer>
-<script src="js/login.js"></script>
+<script src="UI/js/login.js"></script>
 </body>
 </html>
