--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
 <footer class="footer">
   <p>&copy; Copyright 2018, StackOverFlow-lite</p>
 </footer>
-<script src="js/signUp.js"></script>
+<script src="UI/js/signUp.js"></script>
 </body>
 </html>
 
