style user questions page

--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     <a href="profile.html" class="active" id="profile1">Profile</a>
     <a href="post-question.html">Post Question</a>
     <a href="recent-questions.html" >Recent Questions</a>
-    <a href="login.html">Logout</a>
+    <a id="logout" onclick="{logoutUser()}">Logout</a>
   </div>
 </div>
     <br>
@@ -67,6 +67,7 @@
 </footer>
 <script src="UI/js/retrieveUserQuestions.js"></script>
 <script src="UI/js/fetchSpecificQuestion.js"></script>
+<script src="UI/js/logout.js"></script>
  </body>
 </html>
 
