--- a/fetch-specific-question.html
+++ b/fetch-specific-question.html
@@ -1,7 +1,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <link href="UI/css/style.css" type="text/css" rel="stylesheet"/>  
+  <link href="UI/css/style.css" type="text/css" rel="stylesheet"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="header">
@@ -15,7 +16,9 @@
 </div>
  <div class="wrap_q2">
   <h2 id="quest">Question</h2>
-  <div class="wrapT"><h3 id="all-quests"></h3>
+  
+  <p id="msg"></p>
+  <div class="wrapT" ><h3 id="all-quests"></h3>
     <p id="msg"></p>
   </div>
   
