add functionality to hide nav when user is not logged in

--- a/fetch-specific-question.html
+++ b/fetch-specific-question.html
@@ -8,18 +8,18 @@
 <div class="header">
     <a href="#" class="brand">StackOverflow-lite</a>
     <div class="header-right">
-      <a href="home.html">Home</a>
+      <!-- <a href="home.html">Home</a>
       <a href="profile.html">Profile</a>
       <a href='post-question.html'>Post Question</a>
       <a href="recent-questions.html">Recent Questions</a>
-      <a id="logout" onclick="{logoutUser()}">Logout</a>
+      <a id="logout" onclick="{logoutUser()}">Logout</a> -->
+      <script src="UI/js/test.js"></script>
 </div>
  <div class="wrap_q2">
   <h2 id="quest">Question</h2>
   
   <p id="msg"></p>
   <div class="wrapT" ><h3 id="all-quests"></h3>
-    <p id="msg"></p>
   </div>
   
 </div>
