--- a/home.html
+++ b/home.html
@@ -8,10 +8,7 @@
 <div class="header">
     <a href="#" class="brand">StackOverflow-lite</a>
     <div class="header-right">
-      <a href="home.html" class="active">Home</a>
-      <a href="profile.html">Profile</a>
-      <a href='post-question.html'>Post Question</a>
-      <a href="recent-questions.html">Recent Questions</a>
+      <script src="UI/js/test.js"></script>
     </div>
 </div>
  <div class="wrap_q2">
@@ -23,5 +20,6 @@
     <p>&copy; Copyright 2018, StackOverflow-lite</p>
 </footer>
 <script src="UI/js/fetchAllQuestions.js"></script>
+<script src="UI/js/logout.js"></script>
 </body>
 </html>
