--- a/profile.html
+++ b/profile.html
@@ -8,11 +8,7 @@
 <div class="header">
   <a href="#" class="brand">StackOverflow-lite</a>
   <div class="header-right">
-    <a href="home.html">Home</a>
-    <a href="profile.html" class="active" id="profile1">Profile</a>
-    <a href="post-question.html">Post Question</a>
-    <a href="recent-questions.html" >Recent Questions</a>
-    <a id="logout" onclick="{logoutUser()}">Logout</a>
+    <script src="UI/js/test.js"></script>
   </div>
 </div>
     <br>
@@ -23,8 +19,8 @@
   </div>
 
   <div class="row">
+    	<p id="msg"></p>
     <div class="column">
-
     </div>
     </div>
     <div class="row">
