--- a/recent-questions.html
+++ b/recent-questions.html
@@ -10,10 +10,7 @@
   <div class="header">
     <a href="#" class="brand">StackOverflow-lite</a>
     <div class="header-right">
-      <a href="home.html">Home</a>
-      <a href="profile.html">Profile</a>
-        <a href="post-question.html">Post Question</a>
-        <a href="recent-questions.html" class="active">Recent Questions</a>
+        <script src="UI/js/test.js"></script>
     </div>
   </div>
   <br> 
