--- a/post-question.html
+++ b/post-question.html
@@ -33,6 +33,7 @@
       </div>
         
 <script src="UI/js/postQuestion.js"></script>
+<script src="UI/js/logout.js"></script>
 </body>
 <footer class="footer">
   <p class="copyright">&copy; Copyright 2018, StackOverFlow-lite</p>
