--- a/recent-questions.html
+++ b/recent-questions.html
@@ -21,6 +21,7 @@
 </div>
     </div>
   <script src="UI/js/recentQuestions.js"></script>
+  <script src="UI/js/logout.js"></script>
 </body>
 <footer class="footer">
   <p class="copyright">&copy; Copyright 2018, StackOverFlow-lite</p>
